Implemented ordering of attachments in collections. Small start of functional / unit testing.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -48,6 +48,7 @@
             <script src="{{ asset('bundles/app/js/angular-map/ng-map.min.js') }}"></script>
             <script src="{{ asset('bundles/app/js/angular-dropzone/dropzone.js') }}"></script>
             <script src="{{ asset('bundles/app/js/angular-dropzone/ng-dropzone.min.js') }}"></script>
+            <script src="{{ asset('bundles/app/js/angular-sortable/html5-sortable.js') }}"></script>
 
             <script src="{{ asset('bundles/app/js/angular-charts/highcharts.js') }}"></script>
             <script src="{{ asset('bundles/app/js/angular-charts/highcharts-more.js') }}"></script>
