Spanish language translations added.

--- a/src/AdministrationBundle/Resources/views/inventory/inventory_form.html.twig
+++ b/src/AdministrationBundle/Resources/views/inventory/inventory_form.html.twig
@@ -100,7 +100,7 @@
     </h5>
     <div class="well">
         {% verbatim %}
-        <ng-dropzone class="dropzone" options="dzOptions" callbacks="dzCallbacks" methods="dzMethods"></ng-dropzone>
+        <ng-dropzone id="collectionDropzone" class="dropzone" options="dzOptions" callbacks="dzCallbacks" methods="dzMethods"></ng-dropzone>
         {% endverbatim %}
     </div>
 
