--- a/src/AdministrationBundle/Resources/views/maintenance/periodically/maintenance_form.html.twig
+++ b/src/AdministrationBundle/Resources/views/maintenance/periodically/maintenance_form.html.twig
@@ -117,8 +117,8 @@
     </h5>
     <div class="well">
         {% verbatim %}
-            <ng-dropzone id="maintenance" class="dropzone" options="dzOptions" callbacks="dzCallbacks" methods="dzMethods"></ng-dropzone>
-            {% endverbatim %}
+        <ng-dropzone id="collectionDropzone" class="dropzone" options="dzOptions" callbacks="dzCallbacks" methods="dzMethods"></ng-dropzone>
+        {% endverbatim %}
     </div>
 
     {# Buttons #}
