Maintenance and Inventory removed super admin auth check.

--- a/src/AppBundle/Resources/views/store/inventory.html.twig
+++ b/src/AppBundle/Resources/views/store/inventory.html.twig
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row" ng-show="AUTH.isSuperAdmin()">
+    <div class="row">
         <div class="panel-body">
             <h4 ng-cloak>
                 <i class="fa fa-fw fa-list"></i> {{ ng.translate('INVENTORY.LABEL') }} {{ ng.translate('INVENTORY.OF') }} {{ store.Name }}
