--- a/src/AppBundle/Resources/views/store/maintenance.html.twig
+++ b/src/AppBundle/Resources/views/store/maintenance.html.twig
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row" ng-show="AUTH.isSuperAdmin()">
+    <div class="row">
         <div class="panel-body">
             <h4 ng-cloak>
                 <i class="fa fa-fw fa-wrench"></i> {{ ng.translate('MAINTENANCE.LABEL') }} {{ ng.translate('MAINTENANCE.FOR') }} {{ store.Name }}
