--- a/src/AdministrationBundle/Resources/views/dashboard/menu.html.twig
+++ b/src/AdministrationBundle/Resources/views/dashboard/menu.html.twig
@@ -4,7 +4,7 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading menu-header cursor-default" ng-cloak>
-                        <i class="fa fa-fw fa-user fa-2x"></i> {{ ng.translate('TCM') }} - {{ '{{ AUTH.user().Name }}' }}
+                        <i class="fa fa-fw fa-user fa-2x"></i> {{ ng.translate('TCM') }} - {{ '{{ AUTH.user().Name }}' }} !
                     </div>
                     <div class="panel-body">
                         <div class="row">
